feat: Isolando o Domain Model do Representation Model com o padrão DTO e criando DTOs para entrada de dados na API